# -

./: .editorconfig  .gitattributes  .gitignore  .npmrc  BUILD_NCNN_GUIDE.md  LOCAL_INFERENCE_SOLUTIONS.md  NCNN_INTEGRATION.md  NCNN_SETUP_GUIDE.md  PROJECT_STATUS.md  PROJECT_STATUS_SUMMARY.md  build-profile.json5  build_ncnn_ohos.sh  build_ncnn_simple.sh  check_encoding.js  compile_ncnn.sh  convert_core_models.bat  convert_models.py  fix_encoding.py  fix_scheduler.js  newlog_after_install_k.txt  newlog_capture.txt  newlog_verify_k.txt  oh-package.json5  tmp_mojibake_scan.txt  tmp_privateuse_scan.txt  yolo_http_server.py  yolo_server.py  使用与编译指南.txt
.claude/: project_analysis.md  settings.local.json
.npm-cache/_npx/a6797f7ff67bb1f2/: package-lock.json  package.json
AppScope/: app.json5
AppScope/resources/base/element/: string.json
docs/: ARCHIVE_2026-03-30.md  GLB_Model_Integration_Guide.md  Page3_3D_Integration_Checklist.md
entry/: build-profile.json5
entry/hvigor/: hvigor-config.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  gbk_encoder.cpp  glb_loader.cpp  glb_loader.h  hello.cpp  ncnn_detector.cpp  ncnn_yolov5_impl.h  scene3d_renderer.cpp
entry/src/main/cpp/types/libentry/: index.d.ts
entry/src/main/ets/: CODE_MAP.md  VARIABLE_GUIDE.md
entry/src/main/ets/.claude/: settings.local.json
entry/src/main/ets/components/diagnostics/: DiagnosticsPanel.ets
entry/src/main/ets/config/: DeviceNetworkConfig.ets  TencentAsrConfig.ets
entry/src/main/ets/entryability/: EntryAbility.ts
entry/src/main/ets/pages/: Index.ets
entry/src/main/ets/pages/page1/: Page1Theme.ets  Page1View.ets
entry/src/main/ets/pages/page2/: Page2Coordinator.ets  Page2View.ets
entry/src/main/ets/pages/page3/: Page3Coordinator.ets  Page3Store.ets  Page3View.ets
entry/src/main/ets/pages/page4/: Page4View.ets
entry/src/main/ets/services/assistant/: OpenClawGatewayClient.ets  Page4TencentLocalTtsService.ets  Page4TencentVoiceInputAdapter.ets  TencentAsrFlashService.ets  TencentAsrRealtimeService.ets  TencentSignUtil.ets
entry/src/main/ets/services/camera/: CameraDiscoveryService.ets  CameraHealthService.ets  CameraHttpService.ets
entry/src/main/ets/services/control/: CameraPtzService.ets  CarConnectionState.ets  CarFrameCodec.ets  CarProtocolService.ets  CarTcpService.ets
entry/src/main/ets/services/diagnostics/: FrameLogService.ets
entry/src/main/ets/services/media/: MediaPlayerService.ets
entry/src/main/ets/services/network/: DeviceNetworkResolver.ets
entry/src/main/ets/services/recognition/: CarTaskSnapshotArchiveService.ets  HttpYoloEngine.ets  HttpYoloRecognitionService.ets  HttpYoloSelfTestRunner.ets  LibEntryBridge.ets  NcnnIpcClient.ets  NcnnRecognitionService.ets  NcnnWorkerClient.ets  OfflineDecodeService.ets  RecogPayload.ets  RecognitionCenter.ets  RecognitionConfig.ets  RecognitionEngine.ets  RecognitionFactory.ets  RecognitionLoop.ets  RecognitionReportService.ets  RecognitionResult.ets  RecognitionResultViewHelper.ets  RecognitionScheduler.ets  RecognitionService.ets  RecognitionTask.ets  RecognitionTypes.ets  SelfTestJpeg.ets
entry/src/main/ets/services/render3d/: Scene3DNativeApi.ets
entry/src/main/ets/services/replay/: Page2ReplayService.ets  (+2 more)
entry/src/main/ets/state/: AppStore.ets  CommStore.ets  RecogStore.ets  VideoStore.ets
entry/src/main/ets/workers/: NcnnDetectWorker.ets
infer/: build-profile.json5  oh-package.json5
infer/src/main/: module.json5
infer/src/main/ets/pages/: InferStub.ets
infer/src/main/ets/serviceextability/: NcnnInferServiceExtAbility.ts
tmp/: DumpClass.java
tmp/backup_models_20260304_0848/: TFT-B-color-sim-opt.ms.old
tmp/model_backups_20260305_1653/: shape.ms.bak
tmp/pnnx_shape_trial/: shape.param  shape.pnnx.param  shape_ncnn.py  shape_pnnx.py
tmp_export/last_ncnn_model/: metadata.yaml  model_ncnn.py
(+66 files in other folders)
